[tool.poetry]
name = "tradeforce"
version = "0.0.1"
description = "Tradeforce is a comprehensive Python trading framework designed for high-performance backtesting, hyperparameter optimization, and live trading."
authors = ["cyclux <nevermind@cyclux.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
numba = "^0.57.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
optuna = "^3.1.1"
tqdm = "^4.65.0"
pymongo = "^4.3.3"
psycopg2-binary = "^2.9.6"
pyyaml = "^6.0"
asyncio = "^3.4.3"
cryptography = "^40.0.2"
bfx-api-ws-fix = "^2.0.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.260"
mypy = "^1.1.1"
types-psycopg2 = "^2.9.21.9"
types-pytz = "^2023.2.0.1"
types-pyyaml = "^6.0.12.9"
types-tqdm = "^4.65.0.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pandas-stubs = "^1.5.3.230321"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.2.0"
sphinx-autodoc-typehints = "^1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.mypy]
exclude = ['archive', 'analysis', 'docs', 'tests', 'profiling']
# Be stricter
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ['tests']
